tests/expectations/compiler/const_generics/bad_types_fail.out
Error [ETYC0372117]: Expected type `u32` but type `u16` was found.
    --> compiler-test:3:22
     |
   3 |         return bar::[9u16, 0u32]();
     |                      ^^^^
Error [ETYC0372117]: Expected type `scalar` but type `u32` was found.
    --> compiler-test:3:28
     |
   3 |         return bar::[9u16, 0u32]();
     |                            ^^^^
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but (u32, u32) was found
    --> compiler-test:10:18
     |
  10 |     inline foo::[N: (u32, u32), A: [u32; 3]]() -> (u32, u32) {
     |                  ^^^^^^^^^^^^^
Error [ETYC0372141]: A generic const parameter must be a `bool`, an integer, a `scalar`, a `group`, a `field`, or an `address`, but [u32; 3] was found
    --> compiler-test:10:33
     |
  10 |     inline foo::[N: (u32, u32), A: [u32; 3]]() -> (u32, u32) {
     |                                 ^^^^^^^^^^^
